fix(test): add --passWithNoTests flag to vitest commands
Allows test scripts to pass when no test files exist yet.
Applies to: validation, shared, crdt, events, sync-service

Fixes CI test failures for PR #28

--- a/packages/crdt/package.json
+++ b/packages/crdt/package.json
@@ -7,7 +7,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "lint": "eslint src --ext .ts",
-    "test": "vitest"
+    "test": "vitest --run --passWithNoTests"
   },
   "dependencies": {
     "@tournament/shared": "workspace:*",
