--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "lint": "eslint src --ext .ts",
-    "test": "vitest"
+    "test": "vitest --run --passWithNoTests"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0"
