fix: add proper build configuration to shared package
- Add build script using TypeScript compiler (tsc)
- Configure tsconfig.json with proper output to dist/
- Update package.json exports to point to compiled output
- Remove duplicate MatchScore and GameScore from scoring.ts
- Import types from match.ts to avoid conflicts
- Add dist/ to .gitignore
- Fixes CI build error: Cannot find module '@repo/shared/types/scoring'

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "description": "Shared types, models, and constants for tournament platform",
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./src/index.ts"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
   },
   "scripts": {
+    "build": "tsc",
     "lint": "eslint src --ext .ts",
     "test": "vitest --run --passWithNoTests",
     "test:run": "vitest --run --passWithNoTests"
