fix: add subpath exports and fix lint issues in shared package
- Add subpath exports for all types modules (scoring, payment, match, etc)
- Fix ESLint parsing error by ignoring test files globally
- Replace 'any' type with Record<string, unknown> in payment types
- Allows imports like '@repo/shared/types/scoring'
- Fixes CI lint error: parserOptions.project parsing error
- Fixes CI lint warning: Unexpected any in payment.ts

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -10,6 +10,30 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
+    },
+    "./types/scoring": {
+      "types": "./dist/types/scoring.d.ts",
+      "import": "./dist/types/scoring.js"
+    },
+    "./types/payment": {
+      "types": "./dist/types/payment.d.ts",
+      "import": "./dist/types/payment.js"
+    },
+    "./types/match": {
+      "types": "./dist/types/match.d.ts",
+      "import": "./dist/types/match.js"
+    },
+    "./types/tournament": {
+      "types": "./dist/types/tournament.d.ts",
+      "import": "./dist/types/tournament.js"
+    },
+    "./types/player": {
+      "types": "./dist/types/player.d.ts",
+      "import": "./dist/types/player.js"
+    },
+    "./types/organization": {
+      "types": "./dist/types/organization.d.ts",
+      "import": "./dist/types/organization.js"
     }
   },
   "scripts": {
