--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,14 +18,18 @@
     "@tournament/api-contracts": "workspace:*",
     "@tournament/shared": "workspace:*",
     "@types/pdfkit": "^0.17.3",
+    "@upstash/ratelimit": "^2.0.7",
+    "@upstash/redis": "^1.35.6",
     "bcryptjs": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "next": "16.0.1",
     "next-auth": "5.0.0-beta.30",
+    "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "stripe": "^19.2.1",
+    "twilio": "^5.10.4",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -33,10 +37,11 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@vitest/ui": "^2.1.8",
     "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
