docs: configure Redis credentials and notification service setup
- Added Upstash Redis configuration to .env.example with setup instructions
- Added SMTP email configuration with Gmail and SendGrid options
- Added Twilio SMS configuration notes (organization-level)
- Created comprehensive notification service setup guide (technical/NOTIFICATION-SERVICE-SETUP.md)
- Updated apps/web README with proper quick start, testing, and deployment instructions
- Completed NOTIFY-006 (SMS 2-minute deduplication) implementation

Related to Sprint 4 - NOTIFY-001 through NOTIFY-009

--- a/.env.example
+++ b/.env.example
@@ -47,8 +47,14 @@ POSTGRES_DB=saas202520
 # MongoDB
 MONGODB_URI=mongodb://localhost:27020/saas202520
 
-# Redis
+# Redis (Local Development)
 REDIS_URL=redis://localhost:6420
+
+# Upstash Redis (For Rate Limiting & SMS Deduplication)
+# Required for: Notification rate limiting (NOTIFY-007) and SMS deduplication (NOTIFY-006)
+# Get credentials from: https://console.upstash.com/
+UPSTASH_REDIS_REST_URL=https://your-redis-instance.upstash.io
+UPSTASH_REDIS_REST_TOKEN=your_redis_token_here
 
 # ============================================
 # Authentication
@@ -78,10 +84,26 @@ COOKIE_SECRET=your-cookie-secret-here-change-in-production
 # STRIPE_SECRET_KEY=sk_test_...
 # STRIPE_WEBHOOK_SECRET=whsec_...
 
-# SendGrid / Email
+# Email (SMTP) - Required for email notifications (NOTIFY-002)
+# Configure your SMTP server for sending email notifications
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password
+EMAIL_FROM=noreply@yourdomain.com
+EMAIL_REPLY_TO=support@yourdomain.com
+
+# SendGrid (Alternative Email Provider)
 # SENDGRID_API_KEY=
-# EMAIL_FROM=noreply@yourdomain.com
-# EMAIL_REPLY_TO=support@yourdomain.com
+
+# Twilio (SMS Notifications) - Required for SMS notifications (NOTIFY-003)
+# These are organization-level credentials stored in the database
+# Get credentials from: https://console.twilio.com/
+# Note: Each organization should configure their own Twilio credentials via the admin panel
+# TWILIO_ACCOUNT_SID=your_account_sid_here
+# TWILIO_AUTH_TOKEN=your_auth_token_here
+# TWILIO_PHONE_NUMBER=+1234567890
 
 # AWS S3 (File Storage)
 # AWS_ACCESS_KEY_ID=
