--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.6",
     "bcryptjs": "^3.0.3",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "16.0.1",
     "next-auth": "5.0.0-beta.30",
@@ -28,7 +29,10 @@
     "pdfkit": "^0.17.2",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.0",
+    "recharts": "^3.3.0",
     "stripe": "^19.2.1",
+    "swr": "^2.3.6",
     "twilio": "^5.10.4",
     "zod": "^3.25.76"
   },
@@ -40,6 +44,7 @@
     "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/recharts": "^2.0.1",
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
     "eslint": "^9",
