--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@sentry/nextjs": "^7.120.4",
     "@stripe/stripe-js": "^8.3.0",
     "@tournament/api-contracts": "workspace:*",
     "@tournament/shared": "workspace:*",
@@ -23,8 +24,11 @@
     "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "next": "16.0.1",
     "next-auth": "5.0.0-beta.30",
+    "next-pwa": "^5.6.0",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.2",
     "react": "19.2.0",
