--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.1.0",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
